<resources>
    <string name="app_name">Trainometer</string>
    <string name="add_training">ADICIONAR TREINO</string>
    <string name="start_training">Iniciar Treino</string>
    <string name="stats_training">Estatísticas</string>
    <string name="insert_error">Erro ao inserir registro</string>
    <string name="name_training">Nome do Treino</string>
    <string name="date_start">Data de Início</string>
    <string name="period_training">Período do Treino (meses)</string>
    <string name="add_exercise">ADICIONAR EXERCÍCIOS</string>
    <string name="name_exercise">Nome do Exercício</string>
    <string name="execution">Repetições</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancel</string>
    <string name="registered_trainings">TREINOS CADASTRADOS</string>
    <string name="series_training">Série</string>
    <string name="rv_add_training_hint">Segure o item e arraste para cima ou para baixo para alterar a ordem.
    Arraste para a direita para excluí-lo</string>
    <string name="rv_main_menu_hint">Arraste para a direita para excluir o Treino ou para a esquerda para arquivá-lo.</string>
    <string name="rv_execute_exercise_hint">Segure o item e arraste para cima ou para baixo para alterar a ordem. Arraste para a direita para excluir o registro.</string>


    <string name="chronometer">Cronômetro</string>
    <string name="timer">Timer</string>
    <string name="timer_default_time">00:00:00</string>
    <string name="pause_timer">Pause</string>
    <string name="timer_channel_name">Nome Canal</string>
    <string name="timer_channel_description">Descrição Canal</string>
    <string name="chronometer_channel_name">Nome Canal</string>
    <string name="chronometer_channel_description">Descrição Canal</string>
    <string name="start">Iniciar</string>
    <string name="stop">Parar</string>
    <string name="restart">Reiniciar</string>
    <string name="comments">Observações</string>
    <string name="weight">Peso</string>
    <string name="exercise">Exercício</string>
    <string name="subtract">Subtrair</string>
    <string name="reps">Reps</string>
    <string name="add">Adicionar</string>
    <string name="clear">Limpar</string>
    <string name="history">Histórico</string>
    <string name="edit">Editar</string>

    <string name="success">Sucesso</string>
    <string name="error">Erro</string>


    <string name="archive_item">Arquivar %s? Aguarde pare desfazer.</string>
    <string name="delete_item">Confirma a exclusão do %s? Aguarde pare desfazer."</string>
    <string name="archive">Arquivar</string>
    <string name="delete">Excluir</string>
    <string name="training_same_name_open">Treino com mesmo nome em aberto já cadastrado!</string>
    <string name="error_fill_field">Preencha o campo corretamente!</string>
    <string name="finish">Finalizar</string>
    <string name="report_error">Reportar Bug/ Sugestão</string>
    <string name="save">Salvar</string>
    <string name="discard">Descartar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="update">Atualizar</string>
    <string name="name">Nome</string>
    <string name="copy">Copiar</string>
    <string name="copy_training">Copiar Treino</string>
    <string name="edit_training">Editar Treino</string>

    <string name="insert_success">%s inserido com sucesso</string>
    <string name="update_success">%s atualizado com sucesso!</string>
    <string name="delete_success">%s excluído com sucesso!</string>

    <string name="discard_execution">Deseja descartar a execução atual? Se descartada, ela será perdida!</string>
    <string name="finish_execution">Deseja finalizar a execução atual? Se finalizada, ela não poderá ser reaberta!</string>
    <string name="restore_training">Restaurar Treino</string>


</resources>
