<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/copyTrainingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTrainingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:capitalize="none"
                android:text="@string/copy_training"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNameTraining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_training"
                    android:inputType="text|textCapWords|textPersonName"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusableInTouchMode="false"
                    android:focusedByDefault="false"
                    android:gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etDateStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:defaultFocusHighlightEnabled="false"
                        android:enabled="false"
                        android:focusableInTouchMode="false"
                        android:focusedByDefault="false"
                        android:hint="@string/date_start"
                        android:inputType="date"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    app:srcCompat="@drawable/ic_date_range_white_24dp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPeriodTraining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/period_training"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/DividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />


            <TextView
                android:id="@+id/tvAddExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_exercise"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNameExercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_exercise"
                    android:inputType="text|textCapSentences"
                    android:maxLength="64"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRepetition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/execution"
                    android:inputType="text|textCapSentences"
                    android:maxLength="32"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etSerie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/series_training"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnAddExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    android:text="@string/add"
                    android:textColor="@color/White" />


            </LinearLayout>

            <View
                style="@style/DividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvExercises"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="8dp"
                android:defaultFocusHighlightEnabled="false"
                android:focusedByDefault="false"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/tvRvMainMenuHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/rv_add_training_hint"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>