<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnHistTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Histórico" />

            <Button
                android:id="@+id/btnAddTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_default_style"
                android:text="@string/add_training"
                android:textColor="@color/White"/>

            <View
                style="@style/DividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/registered_trainings"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvMainMenu"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_margin="8dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvRvMainMenuHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/rv_main_menu_hint"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>