<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ExecuteExerciseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExecuteExerciseActivity"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExerciseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnSubWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    android:contentDescription="@string/subtract"
                    android:src="@drawable/ic_remove_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:longClickable="false"/>
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    android:contentDescription="@string/add"
                    android:src="@drawable/ic_add_white_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnSubReps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    android:contentDescription="@string/subtract"
                    android:src="@drawable/ic_remove_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    tools:layout_editor_absoluteY="35dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etReps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reps"
                        android:inputType="number"
                        android:singleLine="true"
                        android:longClickable="false"/>
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnPlusReps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    android:contentDescription="@string/add"
                    android:src="@drawable/ic_add_white_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:hint="@string/comments"
                    android:inputType="text|textCapSentences"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:longClickable="false"/>

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_style"
                    android:text="@string/clear"
                    android:textColor="@color/White" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddSerie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_default_style"
                    android:text="@string/add"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/tvCounter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvExecuteExercise"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="8dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/tvRvExecuteExerciseHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/rv_execute_exercise_hint"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:windowSoftInputMode="adjustNothing"
            app:tabGravity="fill"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:windowSoftInputMode="adjustNothing">

        </android.support.v4.view.ViewPager>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>